--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/kareniel/noise#readme",
   "devDependencies": {
     "budo": "^11.5.0",
+    "choo": "^6.13.1",
     "npm-run-all": "^4.1.5",
     "standard": "^12.0.1",
     "tape": "^4.9.2",
